feat: integrate directus api for courses page

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 VITE_CLERK_PUBLISHABLE_KEY=pk_test_ZmxleGlibGUtcmVkZmlzaC04Mi5jbGVyay5hY2NvdW50cy5kZXYk
 CLERK_SECRET_KEY=sk_test_tbXy0bBACJ34YMwYCYzOVeImFLT2MQWWhZK3cr16GI
+
+VITE_BACKEND_KEY=TMf_xL2oF7YA4jPq8gfRcNqbolkwuFEz
+VITE_BACKEND_URL=http://ngerticourse-directus-28a88b-43-128-112-145.traefik.me
