feat: implement course enrollment with Clerk authentication and webhooks

--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
 VITE_CLERK_PUBLISHABLE_KEY=pk_test_ZmxleGlibGUtcmVkZmlzaC04Mi5jbGVyay5hY2NvdW50cy5kZXYk
 CLERK_SECRET_KEY=sk_test_tbXy0bBACJ34YMwYCYzOVeImFLT2MQWWhZK3cr16GI
+CLERK_WEBHOOK_SIGNING_SECRET=whsec_gh4DnfBypSvs2n2iBSzUV8kMxN7XNz/R
+
+SESSION_SECRET=SQp9s+zpe67tutQBm5e2f6Z0kqW8nKxpTh+D4AoZKOo=
 
 VITE_BACKEND_KEY=TMf_xL2oF7YA4jPq8gfRcNqbolkwuFEz
 VITE_BACKEND_URL=http://ngerticourse-directus-28a88b-43-128-112-145.traefik.me
