--- a/package.json
+++ b/package.json
@@ -31,7 +31,13 @@
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-markdown": "^10.1.0",
     "react-router": "^7.5.3",
+    "react-syntax-highlighter": "^15.6.1",
+    "reading-time": "^1.5.0",
+    "rehype-katex": "^7.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "usehooks-ts": "^3.1.1"
@@ -44,6 +50,7 @@
     "@types/node": "^20",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "tailwindcss": "^4.1.4",
     "tw-animate-css": "^1.3.5",
     "typescript": "^5.8.3",
