--- a/biome.jsonc
+++ b/biome.jsonc
@@ -8,6 +8,9 @@
       },
       "suspicious": {
         "noConsole": "info"
+      },
+      "correctness": {
+        "useExhaustiveDependencies": "off"
       }
     }
   }
