--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "typegen": "sanity typegen generate"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.3.23",
     "@clerk/react-router": "^1.8.2",
     "@hookform/resolvers": "^5.2.0",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -27,12 +28,18 @@
     "@sanity/client": "^7.8.1",
     "@sanity/image-url": "^1.1.0",
     "@tabler/icons-react": "^3.34.0",
+    "@tanstack/query-core": "^5.83.0",
     "@tanstack/react-query": "^5.83.0",
+    "@upstash/vector": "^1.2.2",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.1",
+    "embla-carousel-react": "^8.6.0",
     "groq": "^4.1.1",
     "isbot": "^5.1.27",
+    "jotai": "^2.12.5",
+    "jotai-tanstack-query": "^0.10.1",
     "lucide-react": "^0.525.0",
     "motion": "^12.23.6",
     "next-themes": "^0.4.6",
