--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.3.23",
+    "@ai-sdk/react": "^2.0.4",
     "@clerk/react-router": "^1.8.2",
     "@hookform/resolvers": "^5.2.0",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -31,6 +32,7 @@
     "@tanstack/query-core": "^5.83.0",
     "@tanstack/react-query": "^5.83.0",
     "@upstash/vector": "^1.2.2",
+    "ai": "^5.0.4",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
