fix: fix add progression feature

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -6,6 +6,9 @@
       "performance": {
         "noImgElement": "off"
       },
+      "style": {
+        "useBlockStatements": "off"
+      },
       "suspicious": {
         "noConsole": "info"
       },
