--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
+    "@radix-ui/react-use-controllable-state": "^1.2.2",
     "@react-router/node": "^7.5.3",
     "@react-router/serve": "^7.5.3",
     "@sanity/client": "^7.8.1",
@@ -44,8 +45,8 @@
     "isbot": "^5.1.27",
     "jotai": "^2.12.5",
     "jotai-tanstack-query": "^0.10.1",
-    "lucide-react": "^0.525.0",
-    "motion": "^12.23.6",
+    "lucide-react": "^0.539.0",
+    "motion": "^12.23.12",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
