feat: add ai chat feature include with chat history
Introduces a new set of AI chat UI components under app/components/ai-elements, including message, code block, loader, prompt input, and more. Adds supporting UI primitives (collapsible, drawer, hover-card, popover, select, textarea, tooltip). Integrates new AI chat features in app/features/ai-chat and updates lesson and recommendation routes to support the new chat experience. Removes the obsolete test route and updates dependencies and schema types.

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -4,7 +4,8 @@
   "linter": {
     "rules": {
       "performance": {
-        "noImgElement": "off"
+        "noImgElement": "off",
+        "useTopLevelRegex": "off"
       },
       "style": {
         "useBlockStatements": "off"
@@ -14,6 +15,9 @@
       },
       "correctness": {
         "useExhaustiveDependencies": "off"
+      },
+      "complexity": {
+        "noExcessiveCognitiveComplexity": "off"
       }
     }
   }
