--- a/package.json
+++ b/package.json
@@ -11,21 +11,27 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.3.23",
-    "@ai-sdk/react": "^2.0.4",
+    "@ai-sdk/react": "^2.0.15",
     "@clerk/react-router": "^1.8.2",
     "@hookform/resolvers": "^5.2.0",
+    "@icons-pack/react-simple-icons": "^13.7.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
-    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-hover-card": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-radio-group": "^1.3.7",
-    "@radix-ui/react-scroll-area": "^1.2.9",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@radix-ui/react-use-controllable-state": "^1.2.2",
     "@react-router/node": "^7.5.3",
     "@react-router/serve": "^7.5.3",
@@ -35,16 +41,18 @@
     "@tanstack/query-core": "^5.83.0",
     "@tanstack/react-query": "^5.83.0",
     "@upstash/vector": "^1.2.2",
-    "ai": "^5.0.4",
+    "ai": "^5.0.15",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.1",
     "embla-carousel-react": "^8.6.0",
     "groq": "^4.1.1",
+    "harden-react-markdown": "^1.0.4",
     "isbot": "^5.1.27",
     "jotai": "^2.12.5",
     "jotai-tanstack-query": "^0.10.1",
+    "katex": "^0.16.22",
     "lucide-react": "^0.539.0",
     "motion": "^12.23.12",
     "next-themes": "^0.4.6",
@@ -60,8 +68,10 @@
     "remark-math": "^6.0.0",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
+    "use-stick-to-bottom": "^1.1.1",
     "usehooks-ts": "^3.1.1",
-    "zod": "^4.0.10"
+    "vaul": "^1.1.2",
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "@biomejs/biome": "2.1.1",
