feat: implement quiz feature with attempt tracking and immediate grading

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -8,7 +8,8 @@
         "useTopLevelRegex": "off"
       },
       "style": {
-        "useBlockStatements": "off"
+        "useBlockStatements": "off",
+        "noNestedTernary": "off"
       },
       "suspicious": {
         "noConsole": "info"
