--- a/package.json
+++ b/package.json
@@ -37,12 +37,14 @@
     "@react-router/serve": "^7.5.3",
     "@sanity/client": "^7.8.1",
     "@sanity/image-url": "^1.1.0",
+    "@sanity/react-loader": "^1.11.18",
     "@tabler/icons-react": "^3.34.0",
     "@tanstack/query-core": "^5.83.0",
     "@tanstack/react-query": "^5.83.0",
     "@upstash/vector": "^1.2.2",
     "ai": "^5.0.15",
     "axios": "^1.10.0",
+    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.1",
@@ -78,6 +80,7 @@
     "@react-router/dev": "^7.5.3",
     "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.1.4",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^20",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
