--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@tanstack/query-core": "^5.83.0",
     "@tanstack/react-query": "^5.83.0",
     "@upstash/vector": "^1.2.2",
+    "@vercel/react-router": "^1.2.3",
     "ai": "^5.0.15",
     "axios": "^1.10.0",
     "canvas-confetti": "^1.9.3",
