feat: add analytics tracking for lessons, quizzes and user progress

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -7,6 +7,10 @@
         "noImgElement": "off",
         "useTopLevelRegex": "off"
       },
+      "nursery": {
+        "noNestedComponentDefinitions": "off",
+        "noShadow": "off"
+      },
       "style": {
         "useBlockStatements": "off",
         "noNestedTernary": "off"
