--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.1",
     "embla-carousel-react": "^8.6.0",
     "groq": "^4.1.1",
@@ -60,6 +61,7 @@
     "motion": "^12.23.12",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
+    "react-day-picker": "^9.9.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.61.1",
     "react-markdown": "^10.1.0",
