--- a/package.json
+++ b/package.json
@@ -53,11 +53,11 @@
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.1",
     "embla-carousel-react": "^8.6.0",
+    "express-rate-limit": "^8.0.1",
     "groq": "^4.1.1",
     "harden-react-markdown": "^1.0.4",
+    "helmet": "^8.1.0",
     "isbot": "^5.1.27",
-    "jotai": "^2.12.5",
-    "jotai-tanstack-query": "^0.10.1",
     "katex": "^0.16.22",
     "lucide-react": "^0.539.0",
     "motion": "^12.23.12",
@@ -74,6 +74,7 @@
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
     "sonner": "^2.0.6",
+    "string-ts": "^2.2.1",
     "tailwind-merge": "^3.3.1",
     "use-stick-to-bottom": "^1.1.1",
     "usehooks-ts": "^3.1.1",
