--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
     "sonner": "^2.0.6",
+    "streamdown": "^1.1.10",
     "string-ts": "^2.2.1",
     "tailwind-merge": "^3.3.1",
     "use-stick-to-bottom": "^1.1.1",
