--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-markdown": "^10.1.0",
     "react-router": "^7.5.3",
     "react-syntax-highlighter": "^15.6.1",
+    "react-use-measure": "^2.1.7",
     "reading-time": "^1.5.0",
     "rehype-katex": "^7.0.1",
     "remark-gfm": "^4.0.1",
