--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@clerk/react-router": "^1.8.2",
     "@hookform/resolvers": "^5.2.0",
     "@icons-pack/react-simple-icons": "^13.7.0",
+    "@portabletext/react": "^4.0.3",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
