--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "typegen": "sanity typegen generate"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^1.3.23",
-    "@ai-sdk/react": "^2.0.15",
+    "@ai-sdk/openai": "^2.0.32",
     "@clerk/react-router": "^1.8.2",
+    "@convex-dev/agent": "^0.2.8",
+    "@convex-dev/react-query": "^0.0.0-alpha.11",
     "@hookform/resolvers": "^5.2.0",
     "@icons-pack/react-simple-icons": "^13.7.0",
     "@portabletext/react": "^4.0.3",
@@ -21,6 +22,7 @@
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-hover-card": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.15",
@@ -46,11 +48,12 @@
     "@vercel/analytics": "^1.5.0",
     "@vercel/react-router": "^1.2.3",
     "@vercel/speed-insights": "^1.2.0",
-    "ai": "^5.0.15",
+    "ai": "^5.0.45",
     "axios": "^1.10.0",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "convex": "^1.27.0",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.1",
     "embla-carousel-react": "^8.6.0",
