--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@convex-dev/react-query": "^0.0.0-alpha.11",
     "@hookform/resolvers": "^5.2.0",
     "@icons-pack/react-simple-icons": "^13.7.0",
+    "@modelcontextprotocol/sdk": "^1.18.1",
     "@portabletext/react": "^4.0.3",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-avatar": "^1.1.10",
